<resources>
    <string name="app_name">test</string>
    <string name="btn">btn</string>
    <string name="login">login</string>
    <string name="goback">goback</string>
    <string name="UID">UID</string>
    <string name="password">password</string>
    <string name="forgetpwd">forgetpwd</string>
    <string name="signin">signin</string>
    <string name="male">male</string>
    <string name="gonext">gonext</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="logout">logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="commute">commute</string>
    <string name="outing">outing</string>
    <string name="housenumber">housenumber</string>
    <string name="pet">pet</string>
    <string name="child">child</string>
    <string name="gender">gender</string>
    <string name="smoke">smoke</string>
    <string name="user_id">user_id</string>
    <string name="Email">Email</string>
    <string name="passwordconfirm">passwordconfirm</string>
    <string name="datacheck">datacheck</string>
    <string name="Phone_number">Phone_number</string>
    <string-array name="pet_array">
        <item>"Yes"</item>
        <item>"No"</item>
    </string-array>
    <string name="title_activity_homepage" translatable="false">homepage</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="name">name</string>
    <string name="friend">friend</string>
    <string name="personalinformation">personalinformation</string>
    <string name="myroom">myroom</string>
    <string name="chat">chat</string>
    <string name="likelist">likelist</string>
    <string name="signout">signout</string>
    <string name="backtochoice">backtochoice</string>
    <string name="action">action</string>
    <string name="about">about</string>
    <string name="言途" translatable="false">言途</string>
    <string name="menu_test" translatable="false">test</string>
    <string name="unreadmessage">unreadmessage</string>
    <string name="home">home</string>
    <string name="輸入ID">Enter ID</string>
    <string name="輸入年齡">Enter Age</string>
    <string name="生理性別">Gender</string>
    <string name="駕照URL">駕照URL</string>
    <string name="輸入EMAIL">Enter Email</string>

    <string name="roominformation">roominformation</string>
    <string name="drivervalue">drivervalue</string>
    <string name="detailinformation">detailinformation</string>
    <string name="other">other</string>
    <string name="price">price</string>
    <string name="set_off_time">set_off_time</string>
    <string name="nowpeople_limitpeople">nowpeople_limitpeople</string>
    <string name="access">access</string>
    <string name="close">close</string>
    <string name="time">time</string>
    <string name="set_off_date">set_off_date</string>
    <string name="endpoint">endpoint</string>
    <string name="navigating">navigating</string>
    <string name="carcard">carcard</string>
    <string name="Enter_name">Enter_name</string>
    <string name="passenger_information">passenger_information</string>
    <string name="Builds_the_room">Builds_the_room</string>
    <string name="room_chat">room_chat</string>
    <string name="roomnumber">roomnumber</string>
    <string name="age">age</string>
    <string name="startpoint">startpoint</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="textview">TextView</string>
    <string name="driver">driver</string>

</resources>
