<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/myroom_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/key_icon"
            android:title="@string/myroom" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/friend_icon"
            android:title="@string/friend" />
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/likelist_icon"
            android:title="@string/likelist"/>
        <item
            android:id="@+id/test123"
            android:icon="@drawable/signout_icon"
            android:title="@string/signout"
            tools:ignore="DuplicateIds" />
    </group>
</menu>
