<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"

    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    app:headerLayout="@layout/nav_header_homepage"
    app:itemTextColor="#325774"
    app:itemIconTint="#325774"
    app:menu="@menu/activity_main_drawer"
    >

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/myroom"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/friend"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_test"
        android:name="com.example.myapplication.ui.test.nav_test"
        android:label="@string/unreadmessage"
        tools:layout="@layout/fragment_nav_test" />
    <fragment
        android:id="@+id/test123"
        android:name="com.example.myapplication.ui.test123.test123"
        android:label="@string/likelist"
        tools:layout="@layout/fragment_test123" />
    <fragment
        android:id="@+id/personinformation"
        android:name="com.example.myapplication.ui.personinformation.personinformation"
        android:label="@string/personalinformation"
        tools:layout="@layout/fragment_personinformation" />
</navigation>