<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/room_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:background="#eee4e1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/roominformation"
            android:textAlignment="center"
            android:textColor="#102C42"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/All"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:background="@color/底色"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="170dp"
            android:gravity="center_horizontal"
            android:text="@string/drivervalue"
            android:textAlignment="center"
            android:textColor="#102C42"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="120dp"
            android:gravity="center_horizontal"
            android:text="@string/detailinformation"
            android:textAlignment="center"
            android:textColor="#102C42"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/room_dialog1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/wm"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:src="@drawable/ic_mw"/>

            <ImageView
                android:id="@+id/pet"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:src="@drawable/ic_pet" />

            <ImageView
                android:id="@+id/child"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:src="@drawable/ic_child"/>

            <ImageView
                android:id="@+id/smokeing"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="15dp"
                android:padding="5dp"
                android:src="@drawable/ic_smoking"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="210dp"
            android:gravity="center_horizontal"
            android:text="@string/each"
            android:textAlignment="center"
            android:textColor="#102C42"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="210dp"
            android:gravity="center_horizontal"
            android:text="@string/price"
            android:textAlignment="center"
            android:textColor="#102C42"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="177dp"
            android:gravity="center_horizontal"
            android:text="@string/starttime"
            android:textAlignment="center"
            android:textColor="#102C42"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="65dp"
            android:gravity="center_horizontal"
            android:text="@string/nowpeople_limitpeople"
            android:textAlignment="center"
            android:textColor="#102C42"
            android:textSize="18sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/room_dialog2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/close"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="5dp"
                android:background="@color/topcolor"
                android:text="@string/close"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />


            <Button
                android:id="@+id/access"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="5dp"
                android:background="@color/blue"
                android:text="@string/access"
                android:onClick= "clickButton"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
