<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/底色"
    tools:context="com.example.myapplication.RegistrationActivity1">


    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="monospace"
        android:text="個人資料"
        android:textColor="@color/blue"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/firstnameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstnameInput"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:fontFamily="monospace"
        android:hint="@string/Enter_name"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/EmailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />

    <EditText
        android:id="@+id/EmailInput"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:fontFamily="monospace"
        android:hint="@string/輸入EMAIL"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/ageInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstnameInput" />

    <EditText
        android:id="@+id/ageInput"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:fontFamily="monospace"
        android:hint="@string/輸入年齡"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/genderinput"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailInput" />

    <EditText
        android:id="@+id/genderinput"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:fontFamily="monospace"
        android:hint="@string/生理性別"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/photoinput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageInput" />

    <EditText
        android:id="@+id/photoinput"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:fontFamily="monospace"
        android:hint="@string/駕照URL"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderinput" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="131dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle"
        android:fontFamily="monospace"
        android:text="確定"
        android:textAllCaps="false"
        android:textColor="@color/底色"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoinput" />

    <Button
        android:id="@+id/button3"
        android:layout_width="84dp"
        android:layout_height="34dp"
        android:background="@drawable/rectangle_brown"
        android:fontFamily="monospace"
        android:onClick="datePicker"
        android:text="選取日期"
        android:textColor="@color/底色"
        app:layout_constraintBottom_toTopOf="@+id/genderinput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ageInput"
        app:layout_constraintTop_toBottomOf="@+id/EmailInput"
        app:layout_constraintVertical_bias="0.488" />

    <ImageButton
        android:id="@+id/imageButton48"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@color/底色"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/arrow_blue" />

</androidx.constraintlayout.widget.ConstraintLayout>