<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#314c61 "
    tools:context=".choice">

    <Button
        android:id="@+id/idLogout"
        android:layout_width="211dp"
        android:layout_height="50dp"
        android:background="#FF6376"
        android:fontFamily="@font/font1"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="#00000000"
        android:onClick="commute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162"
        app:srcCompat="@drawable/ovalgreen" />


    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771"
        app:srcCompat="@drawable/ovalgreen" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commute"
        android:textColor="#4a595c"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton10"
        app:layout_constraintEnd_toEndOf="@+id/imageButton10"
        app:layout_constraintStart_toStartOf="@+id/imageButton10"
        app:layout_constraintTop_toTopOf="@+id/imageButton10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outing"
        android:textColor="#4a595c"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton11"
        app:layout_constraintEnd_toEndOf="@+id/imageButton11"
        app:layout_constraintStart_toStartOf="@+id/imageButton11"
        app:layout_constraintTop_toTopOf="@+id/imageButton11" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="test"
        android:text="test"
        app:layout_constraintBottom_toTopOf="@+id/imageButton10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>